test/libyul/yulSyntaxTests/invalid/push_disallowed.yul
{
    push0()
    push1()
    push2()
    push3()
    push4()
    push5()
    push6()
    push7()
    push8()
    push9()
    push10()
    push11()
    push12()
    push13()
    push14()
    push15()
    push16()
    push17()
    push18()
    push19()
    push20()
    push21()
    push22()
    push23()
    push24()
    push25()
    push26()
    push27()
    push28()
    push29()
    push30()
    push31()
    push32()
}
// ----
// DeclarationError 4619: (6-11): Function not found.
// TypeError 5017: (18-23): The identifier "push1" can not be used.
// TypeError 5017: (30-35): The identifier "push2" can not be used.
// TypeError 5017: (42-47): The identifier "push3" can not be used.
// TypeError 5017: (54-59): The identifier "push4" can not be used.
// TypeError 5017: (66-71): The identifier "push5" can not be used.
// TypeError 5017: (78-83): The identifier "push6" can not be used.
// TypeError 5017: (90-95): The identifier "push7" can not be used.
// TypeError 5017: (102-107): The identifier "push8" can not be used.
// TypeError 5017: (114-119): The identifier "push9" can not be used.
// TypeError 5017: (126-132): The identifier "push10" can not be used.
// TypeError 5017: (139-145): The identifier "push11" can not be used.
// TypeError 5017: (152-158): The identifier "push12" can not be used.
// TypeError 5017: (165-171): The identifier "push13" can not be used.
// TypeError 5017: (178-184): The identifier "push14" can not be used.
// TypeError 5017: (191-197): The identifier "push15" can not be used.
// TypeError 5017: (204-210): The identifier "push16" can not be used.
// TypeError 5017: (217-223): The identifier "push17" can not be used.
// TypeError 5017: (230-236): The identifier "push18" can not be used.
// TypeError 5017: (243-249): The identifier "push19" can not be used.
// TypeError 5017: (256-262): The identifier "push20" can not be used.
// TypeError 5017: (269-275): The identifier "push21" can not be used.
// TypeError 5017: (282-288): The identifier "push22" can not be used.
// TypeError 5017: (295-301): The identifier "push23" can not be used.
// TypeError 5017: (308-314): The identifier "push24" can not be used.
// TypeError 5017: (321-327): The identifier "push25" can not be used.
// TypeError 5017: (334-340): The identifier "push26" can not be used.
// TypeError 5017: (347-353): The identifier "push27" can not be used.
// TypeError 5017: (360-366): The identifier "push28" can not be used.
// TypeError 5017: (373-379): The identifier "push29" can not be used.
// TypeError 5017: (386-392): The identifier "push30" can not be used.
// TypeError 5017: (399-405): The identifier "push31" can not be used.
// TypeError 5017: (412-418): The identifier "push32" can not be used.
